[gd_scene load_steps=4 format=3 uid="uid://ctw5jefq47rif"]

[ext_resource type="Script" path="res://Main.gd" id="1_pl0hd"]
[ext_resource type="Texture2D" uid="uid://bljwioevhp08e" path="res://icon.svg" id="3_bpdrr"]
[ext_resource type="PackedScene" uid="uid://cxnpx7rgdpnwd" path="res://field_manager.tscn" id="3_mtgqr"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl0hd")

[node name="P1FieldManager" parent="." instance=ExtResource("3_mtgqr")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -320.0
offset_right = 240.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="P2FieldManager" parent="." instance=ExtResource("3_mtgqr")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -640.0
offset_right = 240.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(240, 220)
scale = Vector2(3.75, 1)
texture = ExtResource("3_bpdrr")

[connection signal="check_enemy_dices" from="P1FieldManager" to="." method="_check_enemy_dices"]
[connection signal="end" from="P1FieldManager" to="." method="_end"]
[connection signal="rolled" from="P1FieldManager" to="." method="roll"]
[connection signal="check_enemy_dices" from="P2FieldManager" to="." method="_check_enemy_dices"]
[connection signal="end" from="P2FieldManager" to="." method="_end"]
[connection signal="rolled" from="P2FieldManager" to="." method="roll"]
